[project]
name = "streamlitGoogleAuth"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tim", email = "timothee.papin@faktus.eu"},
]
dependencies = ["streamlit>=1.48.1", "Authlib>=1.6.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
